objects/tmpTransactions__c.object
<CustomObject>
    <fields>
        <fullName>COMMENTS__c</fullName>
        <label>COMMENTS</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ENTERDATE__c</fullName>
        <label>ENTERDATE</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ID__c</fullName>
        <label>ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LicenseFee__c</fullName>
        <label>LicenseFee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Pri_Licname__c</fullName>
        <label>Pri_Licname</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pri_Regno__c</fullName>
        <label>Pri_Regno</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RcDate__c</fullName>
        <label>RcDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Rc_Number__c</fullName>
        <label>Rc Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>tmpTransactions</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Pri_Licname__c</columns>
        <columns>Pri_Regno__c</columns>
        <columns>RcDate__c</columns>
        <columns>ID__c</columns>
        <columns>Rc_Number__c</columns>
        <columns>LicenseFee__c</columns>
        <columns>ENTERDATE__c</columns>
        <columns>COMMENTS__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Records</label>
    </listViews>
    <nameField>
        <label>tmpTransactions</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>tmpTransactions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>